--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "raw-loader": "^0.5.1",
     "react-addons-test-utils": "^15.4.1",
     "redux-mock-store": "^1.2.1",
+    "redux-saga-test-plan": "^2.2.0",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
