--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "babel-preset-env": "^1.2.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
+    "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.2",
     "bodymen": "^1.0.3",
     "compression": "^1.6.2",
@@ -72,19 +73,24 @@
     "copyfiles": "^1.0.0",
     "cors": "^2.8.1",
     "cross-env": "^3.1.4",
+    "crypto": "^0.0.3",
     "csurf": "^1.9.0",
+    "dotenv": "^4.0.0",
     "express": "^4.14.0",
     "express-force-ssl": "^0.3.2",
     "file-loader": "^0.10.0",
     "history": "3.0.0",
     "json-loader": "^0.5.4",
+    "jsonwebtoken": "^7.3.0",
     "lodash": "^4.17.4",
+    "moment": "^2.17.1",
     "mongoose": "^4.7.6",
     "mongoose-keywords": "^0.3.2",
     "morgan": "^1.7.0",
     "normalizr": "^3.0.1",
     "progress-bar-webpack-plugin": "^1.9.3",
     "querymen": "^2.1.1",
+    "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -99,11 +105,13 @@
     "redux-form-submit": "^0.1.3",
     "redux-saga": "^0.14.1",
     "redux-thunk": "^2.1.0",
+    "request": "^2.81.0",
     "rimraf": "^2.6.1",
     "serialize-javascript": "^1.3.0",
     "styled-components": "^1.2.1",
     "styled-theme": "^0.3.0",
     "styled-tools": "^0.1.2",
+    "url": "^0.11.0",
     "url-loader": "^0.5.7",
     "validator": "^7.0.0",
     "webpack": "^2.2.1",
