feat(popup): Refactor according to linter

--- a/.eslintrc
+++ b/.eslintrc
@@ -26,6 +26,7 @@
     }
   },
   "rules": {
+    "no-param-reassign": [2, { "props": false }],
     "semi": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
     "max-len": 0,
