--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     }
   },
   "devDependencies": {
+    "@kadira/react-storybook-addon-info": "^3.3.0",
     "@kadira/storybook": "^2.35.2",
     "babel-eslint": "^7.1.1",
     "babel-jest": "^19.0.0",
