--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "querystring": "^0.2.0",
     "raw-loader": "^0.5.1",
     "react": "^15.4.1",
+    "react-cookie": "^1.0.5",
     "react-dom": "^15.4.1",
     "react-helmet": "^4.0.0",
     "react-hot-loader": "^3.0.0-beta.6",
