--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
   },
   "rules": {
     "no-param-reassign": [2, { "props": false }],
+    "no-underscore-dangle": ["error", { "allow": ["_id"] }],
     "semi": [2, "never"],
     "comma-dangle": [2, "always-multiline"],
     "max-len": 0,
