--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "express": "^4.14.0",
     "express-force-ssl": "^0.3.2",
     "file-loader": "^0.10.0",
+    "fontfaceobserver": "^2.0.9",
     "history": "3.0.0",
     "json-loader": "^0.5.4",
     "jsonwebtoken": "^7.3.0",
